--- a/private/templates/sbnext-common/components/comment_form.twig
+++ b/private/templates/sbnext-common/components/comment_form.twig
@@ -1,7 +1,7 @@
 <div class="grid" id="commentField">
     <div class="col-md-16">
         <div>
-            <textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none" rows="3"
+            <textarea class="form-control" id="commentContents" style="overflow:hidden;resize:vertical" rows="3"
                         placeholder="{{ __("Write your comment here.") }}"></textarea>
         </div>
         <div class="right">
