--- a/private/templates/sbnext-common/upload.twig
+++ b/private/templates/sbnext-common/upload.twig
@@ -14,7 +14,7 @@
                     <h4 style="margin-bottom: 0.5em;">{{ __("Description") }}</h4>
                     <textarea class="form-control form-long uploader-form" name="desc" maxlength="2000"
                               form="uploadForm"
-                              style="overflow:hidden;resize:none" rows="3"></textarea>
+                              style="overflow:hidden;resize:vertical" rows="3"></textarea>
                     <br>
                     <h4 style="margin-bottom: 0.5em;">{{ __("Tags (optional)") }}</h4>
                     <input type="text" class="form-control form-long uploader-form" name="tags">
