--- a/private/templates/sbnext-mobile/watch.twig
+++ b/private/templates/sbnext-mobile/watch.twig
@@ -109,7 +109,7 @@
                             </div>
                             <div class="col-md-12">
                                 <div>
-                        <textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none" rows="3"
+                        <textarea class="form-control" id="commentContents" style="overflow:hidden;resize:vertical" rows="3"
                                   placeholder="{{ __("Enter comment here.") }}"></textarea>
                                 </div>
                                 <div class="right">
