--- a/private/templates/tailwind-common/upload.twig
+++ b/private/templates/tailwind-common/upload.twig
@@ -23,7 +23,7 @@
                             <div class="mt-2">
                                 <textarea class="form-input-textarea" name="desc" maxlength="2000"
                                         form="uploadForm"
-                                        style="overflow:hidden;resize:none" rows="3"></textarea>
+                                        style="overflow:hidden;resize:vertical" rows="3"></textarea>
                             </div>
                         </div>
 
