--- a/private/scss-finalium/_style_forums.scss
+++ b/private/scss-finalium/_style_forums.scss
@@ -17,7 +17,7 @@ table.c1 {
   }
 
   tr.c {
-    background: #55b4cc;
+    background: #ccc;
   }
 
   td.b {
@@ -95,7 +95,7 @@ table.c1 {
     }
 
     th {
-      background: #3367aa;
+      background: #777;
       font-size: 1em;
       color: #ffffff;
     }
