--- a/private/templates/sbnext-common/edit.twig
+++ b/private/templates/sbnext-common/edit.twig
@@ -16,7 +16,7 @@
                     <h4 style="margin-bottom: 0.5em;">{{ __("Description") }}</h4>
                     <textarea class="form-control form-long uploader-form" name="desc" maxlength="2000"
                             form="uploadForm"
-                            style="overflow:hidden;resize:none" rows="3">{{ video.description }}</textarea>
+                            style="overflow:hidden;resize:vertical" rows="3">{{ video.description }}</textarea>
                     <br>
                     <br>
                     <div class="right">
