--- a/private/templates/sbnext-desktop/user.twig
+++ b/private/templates/sbnext-desktop/user.twig
@@ -92,7 +92,7 @@
                     </div>
                     <div class="col-md-15">
                         <div>
-				<textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none" rows="3"
+				<textarea class="form-control" id="commentContents" style="overflow:hidden;resize:vertical" rows="3"
                           placeholder="{{ __("Enter comment here.") }}"></textarea>
                         </div>
                         <div class="right">
