fix inconsistent terms regarding videos/posts/uploads

--- a/private/templates/sbnext-common/admin.twig
+++ b/private/templates/sbnext-common/admin.twig
@@ -41,9 +41,9 @@
 				</td>
 				<td class="nb" style="width:33%; vertical-align:top;">
 					<table class="c1">
-						<caption>{{ __("Latest uploads") }}</caption>
+						<caption>{{ __("Latest posts") }}</caption>
 						<tr class="h">
-							<th class="b" colspan="2">{{ __("Latest uploads") }}</td>
+							<th class="b" colspan="2">{{ __("Latest posts") }}</td>
 						</tr>
 						{% for video in videos %}
 							<tr>
