--- a/private/templates/sbnext-common/browse.twig
+++ b/private/templates/sbnext-common/browse.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-{% block title %}{{ __("Latest videos") }} {% if page != 1 %}{{ __("(Page %s)", [page]) }}{% endif %}{% endblock %}
+{% block title %}{{ __("Browse") }} {% if page != 1 %}{{ __("(Page %s)", [page]) }}{% endif %}{% endblock %}
 
 	{% block content %}
         <h1>{{ title }}</h1>
