improvements to the tw frontend (better home page)

--- a/private/templates/tailwind-common/index.twig
+++ b/private/templates/tailwind-common/index.twig
@@ -1,7 +1,37 @@
 {% extends "_layout.twig" %}
 
 {% block content %}
-    {% for video in videos %}
+    <div class="border-2 border-slate-200 bg-gray-50 shadow-sm p-4 mb-2">
+        <div class="flex flex-col gap-1">
+            <span class="mb-2">Randomly selected posts</span>
+            <div class="grid grid-cols-4 gap-2">
+                {% for video in videos %}
+                    <div class="flex gap-2 flex-col">
+                        <div class="shrink-0">
+                            <a href="watch?v={{ video.video_id }}">
+                            {% if video.post_type == 0 %}
+                                <img class="thumbnail" src="{{ video_thumbnail(video.video_id) }}" alt="{{ video.title }}">
+                            {% elseif video.post_type == 2 %}
+                                <img class="thumbnail" src="{{ art_thumbnail(video.video_id) }}" alt="{{ video.title }}">
+                            {% endif %}
+                            </a>
+                        </div>
+                        <div>
+                            <a href="watch?v={{ video.video_id }}" class="font-semibold">
+                                {{ video.title }}
+                            </a>
+                            <p class="text-gray-400 text-sm">
+                                <a class="no-underline hover:underline hover:text-sky-700">{{ video.u_name }}</a>
+                            </p>
+                            <p class="text-gray-400 text-sm">{{ video.views }} views &bull; X months ago</p>
+                        </div>
+                    </div>
+                {% endfor %}
+        </div>
+    </div>
+{% endblock %}
+
+{#
         <div class="flex justify-start gap-3 my-2">
             <div class="shrink-0">
             {% if video.post_type == 0 %}
@@ -17,5 +47,4 @@
                 <p class="text-gray-400 text-sm">{{ video.u_name }}</p>
             </div>
         </div>
-    {% endfor %}
-{% endblock %}
+#}
