--- a/private/templates/sbnext-common/edit.twig
+++ b/private/templates/sbnext-common/edit.twig
@@ -7,8 +7,8 @@
             <div class="card">
                 <div class="card-body-fat">
                     <input type="hidden" name="vid_id" value="{{ video.video_id }}">
-                    <h2 style="margin-bottom: 0.5em;">{{ __("Edit your post") }}</h2>
-                    <p>{{ __("Enter the new information for your post.") }}</p>
+                    <h2 style="margin-bottom: 0.5em;">{{ __("Edit your submission") }}</h2>
+                    <p>{{ __("Enter the new information for your submission.") }}</p>
                     <h4 style="margin-bottom: 0.5em;">{{ __("Title") }}</h4>
                     <input type="text" class="form-control form-long uploader-form" name="title"
                         value="{{ video.title }}">
