--- a/private/templates/sbnext-common/upload.twig
+++ b/private/templates/sbnext-common/upload.twig
@@ -6,8 +6,8 @@
         <form name="uploadForm" id="uploadForm" method="post" action="upload.php" enctype="multipart/form-data">
             <div class="card">
                 <div class="card-body-fat">
-                    <h2 style="margin-bottom: 0.5em;">{{ __("Upload a post") }}</h2>
-                    <p>{{ __("Enter the required information and select the file for your post.") }}</p>
+                    <h2 style="margin-bottom: 0.5em;">{{ __("Upload a submission") }}</h2>
+                    <p>{{ __("Enter the required information and select the file for your submission.") }}</p>
                     <h4 style="margin-bottom: 0.5em;">{{ __("Title") }}</h4>
                     <input type="text" class="form-control form-long uploader-form" id="title" name="title">
                     <br>
