--- a/private/templates/tailwind-common/upload.twig
+++ b/private/templates/tailwind-common/upload.twig
@@ -6,8 +6,8 @@
         <form name="uploadForm" id="uploadForm" method="post" action="upload.php" enctype="multipart/form-data">
             <div class="space-y-12">
                 <div class="border border-gray-200 p-6 rounded">
-                    <h2 class="text-base font-semibold text-xl leading-7 text-gray-900">{{ __("Upload a post") }}</h2>
-                    <p class="mt-1 text-sm leading-6 text-gray-600">{{ __("Enter the required information and select the file for your post.") }}</p>
+                    <h2 class="text-base font-semibold text-xl leading-7 text-gray-900">{{ __("Upload a submission") }}</h2>
+                    <p class="mt-1 text-sm leading-6 text-gray-600">{{ __("Enter the required information and select the file for your submission.") }}</p>
                     <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
                         <div class="col-span-full">
                             <label for="title" class="form-title">{{ __("Title") }}</label>
