--- a/private/templates/sbnext-common/browse.twig
+++ b/private/templates/sbnext-common/browse.twig
@@ -5,15 +5,25 @@
 	{% block content %}
         <h1>{{ title }}</h1>
         <div class="grid">
+            <div class="card card-body-fat sidebar-nav">
+                <ul class="nav nav-list">
+                    <li class="nav-header">{{ __("Sort") }}</li>
+                    <li {% if type=='recent' %}class="active" {% endif %}><a
+                                href="browse.php?type=recent">{{ __("Most recent") }}</a></li>
+                    <li {% if type=='popular' %}class="active" {% endif %}><a
+                                href="browse.php?type=popular">{{ __("Most popular") }}</a></li>
+                    <li {% if type=='discussed' %}class="active" {% endif %}><a
+                                href="browse.php?type=discussed">{{ __("Most discussed") }}</a></li>
+                    <li {% if type=='favorited' %}class="active" {% endif %}><a
+                                href="browse.php?type=favorited">{{ __("Most favorited") }}</a></li>
+                    <li {% if type=='random' %}class="active" {% endif %}><a
+                                href="browse.php?type=random">{{ __("Random") }}</a></li>
+                </ul>
+            </div>
             {% for level in levels %}
                 {{ small_video_box(level) }}
             {% else %}
-                <div class="bg-dark" style="max-width:700px;margin:auto;padding:20px;padding-bottom:100px;color:white;">
-                    <h2>{{ __("There are no videos of that category.") }}</h2>
-                    <hr>
-                    <p>{{ __("You could create one!") }}</p>
-                    <div style="text-align:center;margin:auto"><img src="{{ website_branding.assets_location }}/logo_monochrome.png" alt="{{ website_branding.name }}" style="max-width:150px;"></div>
-                </div>
+                <div class="header_message header-danger" role="alert">{{ __("There are no submissions.") }}</div>
             {% endfor %}
 
             {% if type == 'all' %}
