--- a/private/templates/sbnext-common/index.twig
+++ b/private/templates/sbnext-common/index.twig
@@ -43,11 +43,11 @@
             {% if videos %}
             <a class="button button-secondary float-right" href="browse.php">{{ __("Browse more") }}</a>
             {% endif %}
-            <h3 style="margin-top:0">{{ __("Randomly selected posts") }}</h3>
+            <h3 style="margin-top:0">{{ __("Randomly selected submissions") }}</h3>
             {% for video in videos %}
                 {{ small_video_box(video) }}
             {% else %}
-                <p>{{ __("This instance does not currently have any uploaded posts.") }}</p>
+                <p>{{ __("This instance currently lacks submissions.") }}</p>
             {% endfor %}
         </div>
     </div>
