--- a/private/templates/sbnext-common/search.twig
+++ b/private/templates/sbnext-common/search.twig
@@ -9,7 +9,7 @@
         {% else %}
             <div class="bg-dark"
                  style="max-width:700px;margin:auto;padding:20px;padding-bottom:100px;color:white;">
-                <h2>{{ __("There are no posts that match your query.") }}</h2>
+                <h2>{{ __("There are no submissions that match your query.") }}</h2>
                 <div style="text-align:center;margin:auto"><img src="../assets/logo_monochrome.png"
                                                                 style="max-width:150px;" alt="{{ website_branding.name }}"></div>
             </div>
