--- a/private/templates/sbnext-common/stats.twig
+++ b/private/templates/sbnext-common/stats.twig
@@ -21,7 +21,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="statbox">
-                            <div class="stat-title">{{ __("Posts") }}</div>
+                            <div class="stat-title">{{ __("Submissions") }}</div>
                             {{ stats.videocount }}
                         </div>
                     </div>
@@ -54,7 +54,7 @@
                 type: 'line',
                 data: {
                     datasets: [{
-                        label: 'Posts',
+                        label: 'Submissions',
                         data: [
                             {% for graph in video_graph_data %}
                             {
