--- a/private/templates/sbnext-desktop/user.twig
+++ b/private/templates/sbnext-desktop/user.twig
@@ -22,8 +22,8 @@
                 <p class="center"><a href="settings.php">{{ __("Edit my settings") }}</a>
                     &bull; <a href="user.php?id={{ id }}&forceuser">{{ __("View user page as viewer") }}</a>
                     {% if userpagedata.powerlevel > 2 %}
-                    &bull; <a href="/admin">{{ __("Admin panel") }}</a></p>
-                {% endif %}
+                    &bull; <a href="/admin">{{ __("Admin panel") }}</a>
+                    {% endif %}
                 </p>
             </div>
         {% endif %}
