fix browse page looking weird on qobo

--- a/private/templates/sbnext-common/browse.twig
+++ b/private/templates/sbnext-common/browse.twig
@@ -5,7 +5,7 @@
 	{% block content %}
         <h1>{{ title }}</h1>
         <div class="grid">
-            <div class="card card-body-fat sidebar-nav">
+            <div class="card sidebar-nav">
                 <ul class="nav nav-list">
                     <li class="nav-header">{{ __("Sort") }}</li>
                     <li {% if type=='recent' %}class="active" {% endif %}><a
